/**
 * @author vaslabs(M K Pavan Kumar)
 * @medium (https://medium.com/@manthapavankumar11)
 */
syntax = "proto3";

option java_multiple_files = true;

package com.vaslabs.proto;

message Product {
  int32 product_id = 1;
  string name = 2;
  string description = 4;
  float price = 3;
  int32 category_id = 5;
}

message ProductList{
  repeated Product product = 1;
}

message Category {
  int32 category_id = 1;
  string name = 2;
}

service ProductService {

  //unary - synchronous
  //request-response stype [not streaming]
  rpc getProductById(Product) returns(Product){}
  rpc getProductByCategoryId(Category) returns(ProductList){}
}